# diyve

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  dive_log_to_uddf.py  program.sh
mechanical/: button_holder.scad  main_holder.scad  plastic_clip.scad  pressure_sensor_enclosure.scad
src/: main.c
src/display/: dive_display.c
src/display/include/: dive_display.h
src/dive_logger/: dive_logger.c  sd_hw_config.c
src/dive_logger/include/: dive_logger.h
src/epd_waveshare_1in54/: DEV_Config.c  EPD_1in54_V2.c  dive_display.c
src/epd_waveshare_1in54/GUI/: GUI_Paint.c
src/epd_waveshare_1in54/include/: dive_display.h
src/gui/: gui.c  screen_dive.c  screen_logs.c  screen_menu.c  screen_settings.c
src/gui/include/: gui.h
src/include/: dive_computer_pins.h  diyve_pins.h
src/ms5803_i2c/: ms5803_i2c.c
src/ms5803_i2c/include/: ms5803_i2c.h
tools/: dive_log_to_uddf.py  sync_time.py
